--- a/src/index.html
+++ b/src/index.html
@@ -217,15 +217,15 @@
                             <p class="author-description-wrapper__text">
                                 Главный поставщик оборудования и курсов в детские центры, сады и школы.
                             </p>
-                            <p class="author-description-wrapper__background">
+                            <p class="author-description-wrapper__background bg-1">
                                 12 стран
                                 <span>присутствия</span>
                             </p>
-                            <p class="author-description-wrapper__background">
+                            <p class="author-description-wrapper__background bg-2">
                                 960 педагогов
                                 <span>обучено</span>
                             </p>
-                            <p class="author-description-wrapper__background">
+                            <p class="author-description-wrapper__background bg-3">
                                 10 000+ 
                                 <span>учеников у наших учеников</span>
                             </p>
@@ -401,7 +401,7 @@
                         </svg>
                     </a>
                     <a href="/" class="button">
-                        <span class="button__label">вконтакте</span>
+                        <span class="button__label">instagram</span>
                         <svg class="button__icon" viewBox="0 0 25 10" xmlns="http://www.w3.org/2000/svg">
                             <path fill-rule="evenodd" clip-rule="evenodd" d="M0 4V0H2L2 4H20.4142L18.5858 2.17157L20 0.757359L22.8285 3.58579L24.2427 5L22.8285 6.41421L20 9.24264L18.5858 7.82843L20.4142 6H2H0V4Z"/>
                         </svg>
