--- a/src/index.html
+++ b/src/index.html
@@ -251,7 +251,7 @@
                 <div class="swiper-container swiper-1">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
-                            <video autoplay muted loop class="video-clip" src="./assets/video/1.mov"></video>
+                            <video autoplay muted loop class="video-clip" src="./assets/video/girl.mp4"></video>
                             <div class="after-description">
                                 <h3 class="after-description__title">
                                     Будущим мамам, мамам в декрете <br>
@@ -275,7 +275,7 @@
                             </div>
                         </div>
                         <div class="swiper-slide">
-                            <video  muted loop class="video-clip" src="./assets/video/1.mov"></video>
+                            <video  muted loop class="video-clip" src="./assets/video/mather.mp4"></video>
                             <div class="after-description">
                                 <h3 class="after-description__title">
                                     Будущим мамам, мамам в декрете <br>
@@ -299,7 +299,7 @@
                             </div>
                         </div>
                         <div class="swiper-slide">
-                            <video  muted loop class="video-clip" src="./assets/video/1.mov"></video>
+                            <video  muted loop class="video-clip" src="./assets/video/student.mp4"></video>
                             <div class="after-description">
                                 <h3 class="after-description__title">
                                     Будущим мамам, мамам в декрете <br>
@@ -323,7 +323,7 @@
                             </div>
                         </div>
                         <div class="swiper-slide">
-                            <video  muted loop class="video-clip" src="./assets/video/1.mov"></video>
+                            <video  muted loop class="video-clip" src="./assets/video/business.mp4"></video>
                             <div class="after-description">
                                 <h3 class="after-description__title">
                                     Будущим мамам, мамам в декрете <br>
