Hotfix autoplay video

--- a/src/index.html
+++ b/src/index.html
@@ -51,7 +51,7 @@
         </button>
     </div>
     <header class="header">
-        <div class="container">
+        <div class="container container_1200">
             <div class="skr4t-information">
                 <h2 class="skr4t-information__title">Бесплатный ОНЛАЙН-МАРАФОН</h2>
                 <h1 class="skr4t-information__subtitle">скорочтение 2.0</h1>
@@ -251,7 +251,7 @@
                 <div class="swiper-container swiper-1">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
-                            <video autoplay muted loop class="video-clip" src="./assets/video/girl.mp4"></video>
+                            <video muted loop class="video-clip" src="./assets/video/girl.mp4"></video>
                             <div class="after-description">
                                 <h3 class="after-description__title">
                                     Будущим мамам, мамам в декрете <br>
