Added text swiper block

--- a/src/index.html
+++ b/src/index.html
@@ -278,17 +278,22 @@
                             <video  muted loop class="video-clip" src="./assets/video/mather.mp4"></video>
                             <div class="after-description">
                                 <h3 class="after-description__title">
-                                    Будущим мамам, мамам в декрете <br>
-                                    или после декрета
+                                    У ребенка, школьника, студента, родителя:
                                 </h3>
                                 <p class="after-description__item">
-                                    включитесь в систему обучения, используя свое время с пользой для себя и для семьи
+                                    Сможет лучше учиться в школе, получать выше оценки
                                 </p>
                                 <p class="after-description__item">
-                                    активируете процесс познания и обучения новому во время беременности или после декрета
+                                    Проще реализовать будущее и выбрать профессию, которую он реально хочет
                                 </p>
                                 <p class="after-description__item">
-                                    используете время декрета для того, чтобы обучиться новой профессии
+                                    Освоить программу школы быстрее и искать работу на цифровые профессии
+                                </p>
+                                <p class="after-description__item">
+                                    Расширят кругозор и быстрее найдут то, что им по душе, по предназначению
+                                </p>
+                                <p class="after-description__item">
+                                    Если ребенок читает быстро, то информацию переварит быстрее и более осознанно
                                 </p>
                                 <button class="button" onclick="scrollToElement('.registration')">
                                     <span class="button__label">записаться на марафон</span>
@@ -302,17 +307,32 @@
                             <video  muted loop class="video-clip" src="./assets/video/student.mp4"></video>
                             <div class="after-description">
                                 <h3 class="after-description__title">
-                                    Будущим мамам, мамам в декрете <br>
-                                    или после декрета
+                                    Если вы студент, аспирант,
+                                    учитесь на онлайн-курсах
                                 </h3>
                                 <p class="after-description__item">
-                                    включитесь в систему обучения, используя свое время с пользой для себя и для семьи
+                                    Успеете быстрее подготовиться к экзаменам и сдать их
                                 </p>
                                 <p class="after-description__item">
-                                    активируете процесс познания и обучения новому во время беременности или после декрета
+                                    Будете готовы к нагрузкам в течение семестра
                                 </p>
                                 <p class="after-description__item">
-                                    используете время декрета для того, чтобы обучиться новой профессии
+                                    Успеваете учиться, работать и отдыхать
+                                </p>
+                                <p class="after-description__item">
+                                    Научитесь черпать больше практики из других источников знаний, зарубежных сайтов, книг, курсов и т. д.
+                                </p>
+                                <p class="after-description__item">
+                                    Будете быстрее и проще всех писать курсовые, дипломные
+                                </p>
+                                <p class="after-description__item">
+                                    Сможете меньше времени уделять учебе, получать больше «автоматов»
+                                </p>
+                                <p class="after-description__item">
+                                    Больше шансов получить стипендии, гранты, выигрывать в конференциях, путешествовать по обмену и за границу
+                                </p>
+                                <p class="after-description__item">
+                                    Возможность дополнительно зарабатывать репетитором
                                 </p>
                                 <button class="button" onclick="scrollToElement('.registration')">
                                     <span class="button__label">записаться на марафон</span>
@@ -326,17 +346,17 @@
                             <video  muted loop class="video-clip" src="./assets/video/business.mp4"></video>
                             <div class="after-description">
                                 <h3 class="after-description__title">
-                                    Будущим мамам, мамам в декрете <br>
-                                    или после декрета
+                                    У взрослого – новая карьера, <br>
+                                    переквалификация, новая профессия:
                                 </h3>
                                 <p class="after-description__item">
-                                    включитесь в систему обучения, используя свое время с пользой для себя и для семьи
+                                    Научитесь новой профессии быстрее – в 20-30 лет можно переучиться быстрее
                                 </p>
                                 <p class="after-description__item">
-                                    активируете процесс познания и обучения новому во время беременности или после декрета
+                                    Расширите кругозор в смежных темах, что поможет зарабатывать больше на текущем месте работы
                                 </p>
                                 <p class="after-description__item">
-                                    используете время декрета для того, чтобы обучиться новой профессии
+                                    Быстрее получите повышение
                                 </p>
                                 <button class="button" onclick="scrollToElement('.registration')">
                                     <span class="button__label">записаться на марафон</span>
