--- a/src/index.html
+++ b/src/index.html
@@ -151,9 +151,7 @@
                 <div class="author-wrapper">
                     <p class="text">
                         <span class="ttl">Aвтор марафона:</span>
-                        Программист, математик, сценарист, психолог-диагност <br>
-                        <span class="text__little">(без 5 минут),</span> 
-                        Главный амбассадор по обучающим навыкам на всем русскоязычном пространстве
+                        Программист, математик, сценарист, психолог-диагност.
                     </p>
                     <div class="author-description">
                         <img src="./assets/images/author.png" alt="Ольга Фуст" class="author-description__photo">
